Updated index.html to include download link

--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
         <p>Have questions or want to get in touch? Reach out to us:</p>
         <!-- Add contact information or a contact form here -->
     </section>
+    
+<!-- New section for downloadable resources -->
+<section id="resources">
+    <h2>Download Resources</h2>
+    <p>Explore our resources to learn more about saving the bees:</p>
+
+    <!-- Example link to download a PDF file -->
+    <a href="save-the-bees-guide.pdf" download="SaveTheBeesGuide.pdf">Save the Bees Guide (PDF)</a>
+
+    <!-- Add more download links as needed -->
+</section>
 
     <footer>
         <p>&copy; 2024 Save the Bees</p>
