--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             color: white;
             text-align: center;
             padding: 1em;
-            position: fixed;
             bottom: 0;
             width: 100%;
         }
@@ -75,14 +74,13 @@
     </section>
     
 <!-- New section for downloadable resources -->
-<section id="resources">
+<section id="resources"
+style="margin-bottom 100px;">
     <h2>Download Resources</h2>
     <p>Explore our resources to learn more about saving the bees:</p>
 
     <!-- Example link to download a PDF file -->
     <a href="save-the-bees-guide.pdf" download="SaveTheBeesGuide.pdf">Save the Bees Guide (PDF)</a>
-
-    <!-- Add more download links as needed -->
 </section>
 
     <footer>
