--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ style="margin-bottom 100px;">
     <p>Explore our resources to learn more about saving the bees:</p>
 
     <!-- Example link to download a PDF file -->
-    <a href="save-the-bees-guide.pdf" download="SaveTheBeesGuide.pdf">Save the Bees Guide (PDF)</a>
+    <a href="Save-the-bees-guide.pdf" download="SaveTheBeesGuide.pdf">Save the Bees Guide (PDF)</a>
 </section>
 
     <footer>
