--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ style="margin-bottom 100px;">
 </section>
 
     <footer>
-        <p>&copy; 2024 Save the Bees</p>
+        <p>&copy; 2024 Save the Bees 1by1</p>
     </footer>
 </body>
 </html>
